# Roade

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Plan de travail Traitement fichiers.xlsx  README.md  RELEASE_NOTES_v0.5.0.md  ROADE_GUIDE_CLAUDE_CODE.md  _dump_xlsx.py  desktop.py  docker-compose.yml  pyproject.toml  roade_desktop.spec  start.bat  start.ps1  start.sh
.github/workflows/: ci.yml
backend/: _selftest.py  _test_cache.py  _test_dedup.py  _test_features.py  _test_formula.py  _test_group.py  _test_keys.py  _test_route.py  _test_validate.py  _test_value_when.py  demo.py  engine.py  errors.py  formula.py  main.py  query_builder.py  requirements.txt  storage.py  workflow_doc.py
docs/: CONTRAT_BLOC.md  DEPLOY.md  DESKTOP.md  DEV.md  NOTICE_MANAGER.md  ROADE_ROADMAP_ETAPE3.md
docs/audit/: 00_README.md  01_ARCHITECTURE_AND_INVENTORY.md  02_BLOCK_CATALOG.md  03_BLOCK_CAPABILITY_MATRIX.md  04_USER_FLOWS.md  05_UX_HEURISTIC_AUDIT.md  06_DESIGN_SYSTEM_AUDIT.md  07_TECH_HEALTH_AND_RISKS.md  08_DATA_INTEGRITY_AND_CORRECTNESS.md  09_OPEN_QUESTIONS_AND_ASSUMPTIONS.md
frontend/: .prettierrc.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.jsx  App.test.jsx  api.js  api.test.js  styles.css  theme.js  theme.ts  toast.js
frontend/src/components/: Backpack.jsx  BlockEditor.jsx  ButtonEdge.jsx  DataPreview.jsx  ErrorBoundary.jsx  Icon.jsx  Icon.test.jsx  Inspector.jsx  Onboarding.jsx  ProjectList.jsx  ProjectList.test.jsx  ProjectView.jsx  QueryBuilder.jsx  Toaster.jsx  WorkflowEditor.jsx  WorkflowFlow.jsx  editorContext.js  routing.jsx  validateHelpers.js  validateHelpers.test.js
frontend/src/components/nodes/: CalcNode.jsx  CleanNode.jsx  ColsNode.jsx  DedupNode.jsx  ExportNode.jsx  FilterNode.jsx  GroupNode.jsx  PivotNode.jsx  ReportNode.jsx  SourceNode.jsx  SqlNode.jsx  StopNode.jsx  UnionNode.jsx  ValidateNode.jsx
frontend/src/components/ui/: Button.jsx  Button.test.jsx  ColumnPicker.jsx  ColumnPicker.test.jsx  CommandPalette.jsx  ConfirmDialog.jsx  ConnectDialog.jsx  ConnectDialog.test.jsx  Field.jsx  Field.test.jsx  IconButton.jsx  Modal.jsx  Modal.test.jsx  ShortcutsHelp.jsx
frontend/src/lib/: a11y.js  etaModel.js  etaModel.test.js  loadEstimate.js  loadEstimate.test.js  onboarding.js  onboarding.test.js  paths.js  preflight.js  preflight.test.js
frontend/src/test/: setup.js
frontend/src/types/: validate.ts
tests/: conftest.py  test_api.py  test_api_versioning.py  test_cache.py  test_dedup.py  test_dedup_preview.py  test_demo.py  test_eta.py  test_features.py  test_filter_preview.py  test_force_recompute.py  test_formula.py  test_group.py  test_integrity_fr.py  test_keys.py  test_password_gate.py  test_route.py  test_rule_multi_value.py  test_security.py  test_smoke.py  test_sql_errors.py  test_sql_sandbox.py  test_validate.py  test_value_when.py
